fix api create product and update product